--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "check": "tsc --pretty --noEmit",
-    "build": "rimraf dist/ && tsc --pretty",
-    "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
-    "test": "rimraf dist/ && jest --config jest.config.ts ./__tests__"
+    "start": "node dist/index.js",
+    "build": "rimraf dist/ && tsc --pretty",
+    "test": "rimraf dist/ && jest --config jest.config.ts ./__tests__/*.spec.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -22,6 +21,8 @@
   },
   "devDependencies": {
     "@graphql-tools/executor-http": "^1.0.3",
+    "@graphql-tools/mock": "^9.0.0",
+    "@graphql-tools/schema": "^10.0.0",
     "@jest/globals": "^29.7.0",
     "@types/crypto-js": "^4.1.3",
     "@types/express": "^4.17.13",
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.0.1",
     "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
