--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - 3001:3001
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile
     environment:
       NODE_ENV: production
@@ -25,3 +25,20 @@ services:
       DB_MONGO_USERNAME: root
       DB_MONGO_PASSWORD: password
       DB_MONGO_URL: mongodb://root:password@mongo:27017
+
+  frontend:
+    image: frontend-application
+    restart: always
+    ports:
+      - 3000:3000
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    environment:
+      NODE_ENV: production
+      HOST: 0.0.0.0
+      PORT: 3000
+      NEXT_PUBLIC_ENV: production
+      NEXT_PUBLIC_API: http://localhost:3001/graphql
+      NEXTAUTH_SECRET: a5VBzgpejUKx9VRqn7vUG6d98oNH6KITC0QVn97CWos
+      NEXTAUTH_URL: http://localhost:3000/
